--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,9 @@ Email: jumelonline01@gmail.com</p>
 <hr class="my-3">
 
 <div class="footer-main">
-		<a href="mailto:jumelonline01@gmail.com"><small>jumeltagnipez |Email</small></a>
+	
+		
+		<a href="mailto:jumelonline01@gmail.com"><small>©2020 - jumeltagnipez |Email</small></a>
 		
 		<div class="socmed">
 		<a href="https://www.facebook.com/jumel.tagnipez"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
