--- a/portfolio.html
+++ b/portfolio.html
@@ -200,7 +200,7 @@ Failure Analysis is life saving. He did save a lot of driver’s life. If there 
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile: 0969206824/09299947247<br>
+Mobile: 09323280559<br>
 Email: jumelonline01@gmail.com</p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
