--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,8 @@
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile: 09299947247<br>
-Email: jumelonline01@gmail.com</p>
+Mobile: 09323280559<br>
+Email: tagnipez.jumel@gmail.com</p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
 		<div class="form-group">
@@ -86,7 +86,7 @@ Email: jumelonline01@gmail.com</p>
 <hr class="my-3">
 
 <div class="footer-main">
-		<a href="mailto:jumelonline01@gmail.com"><small>jumeltagnipez |Email</small></a>
+		<a href="mailto:tagnipez.jumel@gmail.com"><small>©2020 jumeltagnipez |Email</small></a>
 		
 		<div class="socmed">
 		<a href="https://www.facebook.com/jumel.tagnipez"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
