--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@ Failure Analysis is life saving. He did save a lot of driver’s life. If there 
 <p>How may I help you? Feel free to contact me:<br>
 
 Mobile: 09323280559<br>
-Email: jumelonline01@gmail.com</p>
+Email: tagnipez.jumel@gmail.com</p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
 		<div class="form-group">
@@ -231,7 +231,7 @@ Email: jumelonline01@gmail.com</p>
 <div class="footer-main">
 	
 		
-		<a href="mailto:jumelonline01@gmail.com"><small>©2020 jumeltagnipez |Email</small></a>
+		<a href="mailto:tagnipez.jumel@gmail.com"><small>©2020 jumeltagnipez |Email</small></a>
 		
 		<div class="socmed">
 		<a href="https://www.facebook.com/jumel.tagnipez"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
