--- a/port.html
+++ b/port.html
@@ -67,7 +67,7 @@
 		  <h3>CAPSTONE1</h3>
 		  <a href="landingpage.html"><img src="assets/images/capstone1.jpg" alt="portfolio-1"></a>
 		
-		  <p class="lead text-primary">Static website Click Services Limited is here to serve you for photo albums for special occasions like wedding. Tour Packages are also available to serve you.</p><hr>
+		  <p class="lead text-primary">Static website Click Services Limited is here to serve you for photo albums for special occasions like wedding. Tour Packages are also available to serve you. (wwww.clickservices.tk)</p><hr>
 		  Released: Jul 23, 2018<br class="display-4">
 		  	Technologies:<br>
 			Bootstrap
@@ -92,7 +92,7 @@
 		  
 		  <a href="https://jumel.000webhostapp.com/cp2/landingpage.php"><img src="assets/images/capstone2.jpg" alt="portfolio-2"></a>
 		
-		  <p class="lead text-primary">Tech-Shop is a dynamic e-commerce site for techy guys who wanted to connect the internet everywhere in the office area, homes, or even inside your car.</p><hr>
+		  <p class="lead text-primary">Tech-Shop is a dynamic e-commerce site for techy guys who wanted to connect the internet everywhere in the office area, homes, or even inside your car. (wwww.techshoponline.tk)</p><hr>
 		  Released: Sep 3, 2018<br class="display-4">
 		  	Technologies:<br>
 		  	HTML/CSS
@@ -116,7 +116,7 @@
 			
 		  <a href="https://mydiary-online.000webhostapp.com"><img src="assets/images/jt.jpg" alt="portfolio-3"></a>
 																    
-		  <p class="lead text-primary">CAPSTONE3 is the third project that is a daily diary constructed using a PHP MVC Laravel framework.</p><hr>
+		  <p class="lead text-primary">CAPSTONE3 is the third project that is a daily diary constructed using a PHP MVC Laravel framework. (www.diaryonline.tk)</p><hr>
 		  Released: Sep 27, 2018<br class="display-4">
 		  	Technologies:<br>
 		  	HTML/CSS
@@ -140,8 +140,8 @@
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile: 09299947247<br>
-Email: jumelonline01@gmail.com</p>
+Mobile: 09323280559<br>
+Email: tagnipez.jumel@gmail.com</p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
 		<div class="form-group">
@@ -169,7 +169,7 @@ Email: jumelonline01@gmail.com</p>
 <hr class="my-3">
 
 <div class="footer-main">
-		<a href="mailto:jumelonline01@gmail.com"><small>jumeltagnipez |Email</small></a>
+		<a href="mailto:tagnipez.jumel@gmail.com"><small>©2020 jumeltagnipez |Email</small></a>
 		
 		<div class="socmed">
 		<a href="https://www.facebook.com/jumel.tagnipez"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
