--- a/landingpage.html
+++ b/landingpage.html
@@ -64,8 +64,8 @@
 </audio>
 
 <div class="footer-main">
-		<a href="https://jumeltagnipez.github.io/capstone1/portfolio.html"><small>jumeltagnipez|</small></a>
-		<a href="mailto:jumelonline01@gmail.com"><small>Email</small></a>
+		<a href="https://jumeltagnipez.github.io/capstone1/portfolio.html"><small>©2020 jumeltagnipez|</small></a>
+		<a href="mailto:tagnipez.jumel@gmail.com"><small>Email</small></a>
 		
 		<div class="socmed">
 		<a href="https://www.facebook.com"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
