--- a/index.html
+++ b/index.html
@@ -397,9 +397,9 @@ Baguio: PHP1,500
 <section class="contact clear"><br>
 <h3 id="us">Contact Us</h3>
 <p>We'd love to hear from you or just say hello.<br>
-Landline: +63 46 973 6012<br>
-Mobile: +63 945 490 3238<br>
-Email: jumelonline01@gmail.com</p>
+
+Mobile: +63 932 328 0559<br>
+Email: tagnipez.jumel@gmail.com</p>
 <p><span>Book Now!</span>
 There are only 52 Saturdays in a year.<br>
 Popular dates often book up months in advance or even a year.</p>
@@ -429,8 +429,8 @@ Popular dates often book up months in advance or even a year.</p>
 
 
 <div class="footer-main">
-    <a href="https://jumeltagnipez.github.io/capstone1/portfolio.html"><small>jumeltagnipez|</small></a>
-    <a href="mailto:jumelonline01@gmail.com"><small>Email</small></a>
+    <a href="https://jumeltagnipez.github.io/capstone1/portfolio.html"><small>©2020 jumeltagnipez|</small></a>
+    <a href="mailto:tagnipez.jumel@gmail.com"><small>Email</small></a>
     
     <div class="socmed">
     <a href="https://www.facebook.com"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
