--- a/support.html
+++ b/support.html
@@ -97,9 +97,9 @@
 <section class="contact clear"><br>
 <h3 id="us">Contact Us</h3>
 <p>We'd love to hear from you or just say hello.<br>
-Landline: +63 46 973 6012<br>
-Mobile: +63 929 994 7247<br>
-Email: jumelonline01@gmail.com</p>
+
+Mobile: +63 932 328 0559<br>
+Email: tagnipez.jumel@gmail.com</p>
 <p><span>Book Now!</span>
 There are only 52 Saturdays in a year.<br>
 Popular dates often book up months in advance or even a year.</p>
@@ -131,7 +131,7 @@ Popular dates often book up months in advance or even a year.</p>
 </div> <!-- container fluid -->
 
 <div class="footer-main">
-		<a href="mailto:jumelonline01@gmail.com"><small>jumeltagnipez |Email</small></a>
+		<a href="mailto:tagnipez.jumel@gmail.com"><small>©2020 jumeltagnipez |Email</small></a>
 		
 		<div class="socmed">
 		<a href="https://www.facebook.com/jumel.tagnipez"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
