--- a/portfolio.html
+++ b/portfolio.html
@@ -86,9 +86,9 @@
 			He studied Master's degree in Management Engineering at the University of San Jose Recoletos.<br>
 
 			
-P.S. He is not a Muslim from Southern Philippines. He is a Christian from Cebu “queen city of the south”. His birthplace is Leyte “typhoon Haiyan site”.<br>
+<!-- P.S. He is not a Muslim from Southern Philippines. He is a Christian from Cebu “queen city of the south”. His birthplace is Leyte “typhoon Haiyan site”.<br> 
 
-Failure Analysis is life saving. He did save a lot of driver’s life. If there is a recall, don’t hesistate to ask your nearest car dealer.<br>
+Failure Analysis is life saving. He did save a lot of driver’s life. If there is a recall, don’t hesistate to ask your nearest car dealer.<br> -->
 
 		
 			
