--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
 			He's also involved in team project management for the travel site business.<br>
 			
 			He studied Master's degree in Management Engineering at the University of San Jose Recoletos.<br>
-He became a freelance Engineer having interest in law school for land reform laws, labor codes, tax, etc. 
+He became a freelance Engineer having interest in law school for land reform laws, labor codes, tax, etc. <br>
 			
 <!-- P.S. He is not a Muslim from Southern Philippines. He is a Christian from Cebu “queen city of the south”. His birthplace is Leyte “typhoon Haiyan site”.<br> 
 
