--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
 			
 			He studied Master's degree in Management Engineering at the University of San Jose Recoletos.<br>
 			
-He's into project management having interest in law school for land reform laws, labor codes, tax, etc. <br> 
+He's into IT project management having interest in law school for land reform laws, labor codes, tax, etc. <br> 
 
 <!-- Failure Analysis is life saving. He did save a lot of driver’s life. If there is a recall, don’t hesistate to ask your nearest car dealer.<br> -->
 
