--- a/portfolio.html
+++ b/portfolio.html
@@ -199,8 +199,10 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile: 09323280559<br>
-Email: tagnipez.jumel@gmail.com</p>
+Mobile: 09323280559/09559270322<br>
+Email: jumel_online@yahoo.com (AppleTV)<br>
+Email: jumelonline01@gmail.com (Youtube)<br>
+Email: tagnipez.jumel@gmail.com (YTmusic)</p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
 		<div class="form-group">
