--- a/portfolio.html
+++ b/portfolio.html
@@ -199,9 +199,10 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile: 09323280559(wifi)/09559270322(globe)<br>
-Email: jumel_online@yahoo.com (AppleTV)<br>
-Email: jumelonline01@gmail.com (Youtube)<br>
+Mobile: 09323280559(pldtwifi)/09559270322(globe)<br>
+WhatsApp: +639457935666
+Ymail: jumel_online@yahoo.com (skype.iTunes)<br>
+Gmail: jumelonline01@gmail.com (Youtube)<br>
 Email: tagnipez.jumel@gmail.com (YTmusic)</p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
