--- a/portfolio.html
+++ b/portfolio.html
@@ -199,8 +199,8 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile: 09323280559(pldtwifi)/09559270322(globe)<br>
-WhatsApp: +639457935666
+Mobile: 09323280559(pldt)09559270322(globe)<br>
+WhatsApp: +639457935666<br>
 Ymail: jumel_online@yahoo.com (skype.iTunes)<br>
 Gmail: jumelonline01@gmail.com (Youtube)<br>
 Email: tagnipez.jumel@gmail.com (YTmusic)</p>
