--- a/portfolio.html
+++ b/portfolio.html
@@ -204,7 +204,7 @@ WhatsApp: +639457935666<br>
 (previously +639299947247)<br>
 Ymail: jumel_online@yahoo.com <br>
 Gmail: jumelonline01@gmail.com <br>
-Email: tagnipez.jumel@gmail.com </p>
+AiRmail: tagnipez.jumel@gmail.com </p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
 		<div class="form-group">
