--- a/portfolio.html
+++ b/portfolio.html
@@ -200,7 +200,7 @@ He's into IT project management having interest in law school for land reform la
 <p>How may I help you? Feel free to contact me:<br>
 
 Mobile:09323280559/09559270322snapchat<br>
-WhatsApp: +639457935666<br>
+WhatsApp: +639457935666(globe.mobile)<br>
 (previously +639299947247 now on viber)<br>
 Ymail: jumel_online@yahoo.com(skype) <br>
 Gmail: jumelonline01@gmail.com(gtalk) <br>
