--- a/portfolio.html
+++ b/portfolio.html
@@ -203,8 +203,8 @@ Mobile:09323280559/09559270322snapchat<br>
 WhatsApp: +639457935666.globe.mobile<br>
 (previously +639299947247 now on viber)<br>
 Ymail: jumel_online@yahoo.com(skype) <br>
-Gmail: jumelonline01@gmail.com(gtalk) <br>
-AiRmail: tagnipez.jumel@gmail.com </p>
+Gmail: jumelonline01@gmail.com(gtalk.MSteams) <br>
+AiRmail: tagnipez.jumel@gmail.com(meet) </p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
 		<div class="form-group">
