--- a/portfolio.html
+++ b/portfolio.html
@@ -199,13 +199,9 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile:09323280559/09559270322snapchat<br>
-WhatsApp: +639457935666.globe.mobile<br>
-(previously +639299947247 now on viber)<br>
+Mobile:09323280559/09559270322(wink)<br>
 
-Ymail: jumel_online@yahoo.com <br>
-Gmail: jumelonline01@gmail.com <br>
-AiRmail: tagnipez.jumel@gmail.com </p>
+Email: jumel_online@yahoo.com <br></p>
 
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
