--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,9 @@ He's into IT project management having interest in law school for land reform la
 
 Mobile:09323280559/09559270322(wink)<br>
 
-Email: jumel_online@yahoo.com <br></p>
+EmailAddress:jumel_online@yahoo.com <br>
+VoIP address:jumelonline01@gmail.com(gtalk)<br>
+Skype address: jumel.tagnipez</p>
 
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
