--- a/portfolio.html
+++ b/portfolio.html
@@ -203,7 +203,8 @@ Mobile:09323280559/09559270322(wink)<br>
 
 EmailAddress:jumel_online@yahoo.com <br>
 VoIP address:jumelonline01@gmail.com(gtalk)<br>
-Skype address: jumel.tagnipez</p>
+Skype address: jumel.tagnipez
+HyperText add: http://jumeltagnipez.tk</p>
 
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
