--- a/portfolio.html
+++ b/portfolio.html
@@ -202,8 +202,8 @@ He's into IT project management having interest in law school for land reform la
 Mobile:09323280559/09559270322(wink)<br>
 
 EmailAddress:jumel_online@yahoo.com <br>
-VoIP address:jumelonline01@gmail.com(gtalk)<br>
-Skype address: jumel.tagnipez
+VoIP add:jumelonline01@gmail.com(gtalk)<br>
+Skype address: jumel.tagnipez<br>
 HyperText add: http://jumeltagnipez.tk</p>
 
 <p><span>In every problem, there's a solution!</span></p>
