--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@ He's into IT project management having interest in law school for land reform la
 
 Mobile:09323280559/09559270322(wink)<br>
 
-EmailAddress:jumel_online@yahoo.com <br>
+EmailAdd:jumel_online@yahoo.com(MSn) <br>
 VoIP add:jumelonline01@gmail.com(gtalk)<br>
 Skype address: jumel.tagnipez<br>
 HyperText add: http://jumeltagnipez.tk</p>
