--- a/portfolio.html
+++ b/portfolio.html
@@ -200,6 +200,8 @@ He's into IT project management having interest in law school for land reform la
 <p>How may I help you? Feel free to contact me:<br>
 
 Mobile:09323280559/09559270322(wink)<br>
+<!--09183140152@smart.mms.ph-->
+<!--09153760570@globextm.com.ph-->
 
 EmailAdd:jumel_online@yahoo.com(MSn) <br>
 VoIP add:jumelonline01@gmail.com(gtalk)<br>
