--- a/portfolio.html
+++ b/portfolio.html
@@ -149,7 +149,7 @@ He's into IT project management having interest in law school for land reform la
 		<div class="jumbotron bg-transparent">
 		  <h3 class="display-5">CAPSTONE2</h3>
 		  
-		  <a href="https://jumel.000webhostapp.com/cp2/landingpage.php" target="_blank"><img src="assets/images/capstone2.jpg" alt="portfolio-2"></a>
+		  <a href="https://unimposing-tag.000webhostapp.com/cp2/landingpage.php" target="_blank"><img src="assets/images/capstone2.jpg" alt="portfolio-2"></a>
 		
 		  <p class="lead text-primary">Tech-shop is a dynamic e-commerce site for techy guys who wanted to connect the internet everywhere in the office area, homes, or even inside your car. (www.techshoponline.tk)</p><hr>
 		  Released: Sep 3, 2018<br class="display-4">
