--- a/portfolio.html
+++ b/portfolio.html
@@ -205,8 +205,8 @@ Mobile:09323280559/09559270322(wink)<br>
 
 EmailAdd:jumel_online@yahoo.com(MSn) <br>
 VoIP add:jumelonline01@gmail.com(gtalk)<br>
-Skype address: jumel.tagnipez<br>
-HyperText add: http://jumeltagnipez.tk</p>
+URL :meetingsapac44.webex.com<br>
+http://jumeltagnipez.tk</p>
 
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
