--- a/portfolio.html
+++ b/portfolio.html
@@ -205,6 +205,7 @@ Mobile:09323280559/09559270322(wink)<br>
 
 EmailAdd:jumel_online@yahoo.com(MSn) <br>
 VoIP add:jumelonline01@gmail.com(gtalk)<br>
+GoogleMeet:tagnipez.jumel@gmail.com<br>
 URL :meetingsapac44.webex.com<br>
 </p>
 
