--- a/portfolio.html
+++ b/portfolio.html
@@ -203,9 +203,9 @@ Mobile: 09323280559/09559270322(wink)<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
 
-EmailAdd: jumel_online@yahoo.com(MSn) <br>
-VoIP add: jumelonline01@gmail.com(gtalk)<br>
-GoogleMeet: tagnipez.jumel@gmail.com<br>
+YMail: jumel_online@yahoo.com <br>
+Skype: jumel.tagnipez<br>
+GMail: tagnipez.jumel@gmail.com<br>
 URL :meetingsapac44.webex.com/meet/DV1ZTA<br>
 </p>
 
