--- a/portfolio.html
+++ b/portfolio.html
@@ -199,7 +199,7 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile: 09323280559/09559270322(wink)<br>
+Mobile: 09323280559/+639457935666viber<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
 
