--- a/portfolio.html
+++ b/portfolio.html
@@ -204,7 +204,7 @@ Mobile: 09559270322/+639457935666viber<br>
 <!--09153760570@globextm.com.ph-->
 
 YMail: jumel_online@yahoo.com <br>
-Skype: jumel.tagnipez<br>
+Skype(Lync): jumel.tagnipez<br>
 GMail: tagnipez.jumel@gmail.com<br>
 URL:meetingsapac44.webex.com/meet/DV1ZTA<br>
 </p>
