--- a/portfolio.html
+++ b/portfolio.html
@@ -198,12 +198,12 @@ He's into IT project management having interest in law school for land reform la
 <section class="contact clear"><br>
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
-
+<br>
 Mobile: 09559270322/+639457935666viber<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
 
-<!--YMail: jumel_online@yahoo.com--> <br>
+<!--YMail: jumel_online@yahoo.com--> 
 Skype(Lync): jumel.tagnipez<br>
 GMail: tagnipez.jumel@gmail.com<br>
 URL:meetingsapac44.webex.com/meet/DV1ZTA<br>
