--- a/portfolio.html
+++ b/portfolio.html
@@ -244,7 +244,7 @@ URL:meetingsapac44.webex.com/meet/DV1ZTA<br>
 		<a href="https://www.facebook.com/jumel.tagnipez"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
 		<a href="https://www.twitter.com/JumelTagnipez"> <img src="assets/images/twitter.jpg" alt="social-twitter"></a>
 		<a href="https://www.instagram.com/jumeltagnipez"> <img src="assets/images/instagram.jpg" alt="social-instagram"></a>
-		<a href="https://youtu.be/atnHCXVsQUo"> <img src="assets/images/youtube.jpg" alt="social-youtube"></a>
+		<a href="https://youtu.be/4bcRmy3FGag"> <img src="assets/images/youtube.jpg" alt="social-youtube"></a>
 		</div> 
 </div>
 
