--- a/portfolio.html
+++ b/portfolio.html
@@ -199,13 +199,13 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-Mobile: 09559270322/+639457935666viber<br>
+GMobile: 09559270322/+639457935666viber<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
 
-<!--YMail: jumel_online@yahoo.com--> 
+GMail: tagnipez.jumel@gmail.com<br> 
 Skype(Lync): jumel.tagnipez<br>
-GMail: tagnipez.jumel@gmail.com<br>
+YMail: jumel_online@yahoo.com<br>
 URL:meetingsapac44.webex.com/meet/DV1ZTA<br>
 </p>
 
