--- a/portfolio.html
+++ b/portfolio.html
@@ -205,7 +205,7 @@ GMobile: 09559270322/+639457935666viber<br>
 
 GMail: tagnipez.jumel@gmail.com<br> 
 Skype(Lync): jumel.tagnipez<br>
-YMail: jumel_online@yahoo.com<br>
+<!--YMail: jumel_online@yahoo.com-->
 URL:meetingsapac44.webex.com/meet/DV1ZTA<br>
 </p>
 
