--- a/portfolio.html
+++ b/portfolio.html
@@ -199,11 +199,11 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-Mobile: 09208783272, 09457935666 <br>
+GMobile: 09559270322, 09457935666 <br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
 
-EMail: tagnipez.jumel@gmail.com<br> 
+GMail: tagnipez.jumel@gmail.com<br> 
 Skype(Lync): jumel.tagnipez<br>
 <!--YMail: jumel_online@yahoo.com-->
 URL:meetingsapac44.webex.com/meet/DV1ZTA<br>
