--- a/portfolio.html
+++ b/portfolio.html
@@ -204,8 +204,9 @@ GMobile: 09559270322, 09457935666 <br>
 <!--09153760570@globextm.com.ph-->
 
 GMail: tagnipez.jumel@gmail.com<br> 
+VVhatsApp: +639208783272<br>
+VMail: jumel_online@yahoo.com<br>
 Skype(Lync): jumel.tagnipez<br>
-<!--YMail: jumel_online@yahoo.com-->
 URL:meetingsapac44.webex.com/meet/DV1ZTA<br>
 </p>
 
