--- a/portfolio.html
+++ b/portfolio.html
@@ -207,7 +207,7 @@ E: tagnipez.jumel@gmail.com<br>
 <!--VVhatsApp: +639208783272-->
 <!--VMail: jumel_online@yahoo.com-->
 Skype(Lync): jumel.tagnipez<br>
-URL:meetingsapac44.webex.com/meet/DV1ZTA<br>
+<!--URL:meetingsapac44.webex.com/meet/DV1ZTA-->
 </p>
 
 <p><span>In every problem, there's a solution!</span></p>
