--- a/portfolio.html
+++ b/portfolio.html
@@ -199,7 +199,7 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-M: 09559270322, 09208783272whatsapp <br>
+M: 09559270322, +639208783272whatsapp <br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
 
