--- a/portfolio.html
+++ b/portfolio.html
@@ -91,9 +91,9 @@ He's into IT project management having interest in law school for land reform la
 
 		
 			
-			<!-- a href="http://www.mediafire.com/file/qofxzo3yhpslorx/JumelTagnipez_1page.pdf/file"><button type="button" class="btn btn-outline-warning btn-lg animate bounceIn">Curriculum Vitae</button></a -->
+			<a href="https://www.github.com/jumeltagnipez"><button type="button" class="btn btn-outline-warning btn-lg animate bounceIn">Github</button></a>
                         <a href="https://www.linkedin.com/in/jumel-tagnipez-03990311"><button type="button" class="btn btn-outline-important btn-lg animate bounceIn">LinkedIn</button></a>
-			<!-- a href="https://fundraise.redcross.org.au/drr"><button type="button" class="btn btn-outline-danger btn-lg animate bounceIn">Donate To Australia</button></a -->
+			<a href="https://www.skype.com"><button type="button" class="btn btn-outline-danger btn-lg animate bounceIn">Lync</button></a>
                                                                     <!-- 6018b9199 -->
 			</p>
 <div>
