--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,10 @@
 		<h2> <em>FA Engineer skilled in programming
 </em> </h2>
 
-		<p class="bio"> Engr. Jumel Tagnipez is a registered PRC (Professional Regulation Commission)<span> ECE 0039013 and “cum laude” </span> graduate of Electronics&Communications Engineering in Cebu Institute of Technology-University.<br>
+<a href="https://www.gitlab.com/TagnipezJumel"><img src="assets/images/gitlab.png" alt="portfolio-1"></a>
+		<a href="https://www.facebook.com/jumel.tagnipez"><img src="assets/images/FARIS.jpg" alt="portfolio-1"></a>
+		
+		   <p class="bio"> Engr. Jumel Tagnipez is a registered PRC (Professional Regulation Commission)<span> ECE 0039013 and “cum laude” </span> graduate of Electronics&Communications Engineering in Cebu Institute of Technology-University.<br>
 			During his free time, he loves to code & tutors programming,probstat & calculus.<br>
 			He has been working professionally since 2006 in automotive/semiconductor<br>
 			industries as a Quality/FA Engineer doing forensic investigation of a defective<br>
