--- a/portfolio.html
+++ b/portfolio.html
@@ -74,9 +74,7 @@
 		<h2> <em>FA Engineer skilled in programming
 </em> </h2>
 
-<a href="https://www.gitlab.com/TagnipezJumel"><img src="assets/images/gitlab.png" alt="portfolio-1"></a>
-		<a href="https://www.facebook.com/jumel.tagnipez"><img src="assets/images/FARIS.jpg" alt="portfolio-1"></a><br>
-		
+                
 		   <p class="bio"> Engr. Jumel Tagnipez is a registered PRC (Professional Regulation Commission)<span> ECE 0039013 and “cum laude” </span> graduate of Electronics&Communications Engineering in Cebu Institute of Technology-University.<br>
 			During his free time, he loves to code & tutors programming,probstat & calculus.<br>
 			He has been working professionally since 2006 in automotive/semiconductor<br>
@@ -96,9 +94,12 @@ He's into IT project management having interest in law school for land reform la
 			
 			<a href="https://www.github.com/jumeltagnipez"><button type="button" class="btn btn-outline-warning btn-lg animate bounceIn">Github</button></a>
                         <a href="https://www.linkedin.com/in/jumel-tagnipez-03990311"><button type="button" class="btn btn-outline-info btn-lg animate bounceIn">LinkedIn</button></a>
-			<a href="https://www.skype.com"><button type="button" class="btn btn-outline-danger btn-lg animate bounceIn">Lync</button></a>
+			<a href="https://www.skype.com"><button type="button" class="btn btn-outline-danger btn-lg animate bounceIn">Lync</button></a><br>
                                                                     <!-- 6018b9199 -->
-			</p>
+<a href="https://www.gitlab.com/TagnipezJumel"><img src="assets/images/gitlab.png" alt="portfolio-1"></a>
+<a href="https://www.facebook.com/jumel.tagnipez"><img src="assets/images/FARIS.jpg" alt="portfolio-1"></a><br>					
+</p>
+
 <div>
 	<h1 id="portfolio">TECHNOLOGIES</h1><br>
 </div>
