--- a/portfolio.html
+++ b/portfolio.html
@@ -201,11 +201,11 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-M: 09559270322, +639208783272whatsapp <br>
+Mobile: +639559270322<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
 
-E: tagnipez.jumel@gmail.com<br> 
+EMail: tagnipez.jumel@gmail.com<br> 
 <!--VVhatsApp: +639208783272-->
 <!--VMail: jumel_online@yahoo.com-->
 Skype(Lync): jumel.tagnipez<br>
