--- a/portfolio.html
+++ b/portfolio.html
@@ -201,10 +201,10 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-Mobile: +639559270322<br>
+Mobile: 09559270322; +639208783272whatsApp<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-
+PLDT: (932)328-0559<br>
 EMail: tagnipez.jumel@gmail.com<br> 
 <!--VVhatsApp: +639208783272-->
 <!--VMail: jumel_online@yahoo.com-->
