--- a/portfolio.html
+++ b/portfolio.html
@@ -201,11 +201,12 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-Mobile: 09559270322; +639208783272whatsApp<br>
+GMobile: 09457935666; +639208783272whatsApp<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-PLDT: (932)328-0559<br>
-EMail: tagnipez.jumel@gmail.com<br> 
+PLDT7: (932) 328-0559<br>
+Islacom8:(955)9270322<br>
+GMail: tagnipez.jumel@gmail.com<br> 
 <!--VVhatsApp: +639208783272-->
 <!--VMail: jumel_online@yahoo.com-->
 Skype(Lync): jumel.tagnipez<br>
