--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
 
 
 		<h1>Jumel D. Tagnipez</h1>
-		<h2> <!--em-->Quality/FA Engineer/IT (radio"DV1ZTA")
+		<h2> <!--em-->Quality/FA Engineer/IT (radio"DV1ZTA"live@Webex)
 </em> </h2>
 
                 
@@ -210,7 +210,7 @@ GMail: tagnipez.jumel@gmail.com<br>
 <!--VVhatsApp: +639208783272-->
 <!--VMail: jumel_online@yahoo.com-->
 Skype(Lync): jumel.tagnipez<br>
-<!--URL:meetingsapac44.webex.com/meet/DV1ZTA-->
+URL:meetingsapac44.webex.com/meet/DV1ZTA
 
 </p>
 
