--- a/portfolio.html
+++ b/portfolio.html
@@ -204,8 +204,8 @@ He's into IT project management having interest in law school for land reform la
 GMobile: 09457935666; +639208783272whatsApp<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-PLDT7: (932) 328-0559<br>
-Islacom8:(955)9270322<br>
+PLDT7: (932) 328-0559 digitel<br>
+Islacom8:(955)9270322 TMobile<br>
 GMail: tagnipez.jumel@gmail.com<br> 
 <!--VVhatsApp: +639208783272-->
 <!--VMail: jumel_online@yahoo.com-->
