--- a/portfolio.html
+++ b/portfolio.html
@@ -206,7 +206,7 @@ GMobile: 09457935666; +639208783272whatsApp<br>
 <!--09153760570@globextm.com.ph-->
 PLDT7: (932) 328-0559 digitel<br>
 Islacom8:(955)9270322 TMobile<br>
-GMail: tagnipez.jumel@gmail.com<br> 
+GMailAddress: tagnipez.jumel@gmail.com<br> 
 <!--VVhatsApp: +639208783272-->
 <!--VMail: jumel_online@yahoo.com-->
 Skype(Lync): jumel.tagnipez<br>
