--- a/portfolio.html
+++ b/portfolio.html
@@ -204,12 +204,13 @@ He's into IT project management having interest in law school for land reform la
 GMobile: 09559270322 <br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-PLDT7: (932) 328-0559 digitel<br>
-Islacom8:(955)9270322 tmobile<br>
-GMailAddress: jumelonline01@gmail.com<br> 
+PLDT7: (932) 328-0559 <br>
+<!--Islacom8:(955)9270322-->
+GMail: jumelonline01@gmail.com<br> 
 <!--VVhatsApp: +639208783272-->
 <!--VMail: jumel_online@yahoo.com-->
 Skype(Lync): jumel.tagnipez<br>
+YTmusic: tagnipez.jumel@gmail.com
 <!--URL:meetingsapac44.webex.com/meet/DV1ZTA-->
 
 </p>
