--- a/portfolio.html
+++ b/portfolio.html
@@ -207,9 +207,9 @@ GMobile: 09559270322; +639457935666viber<br>
 PLDT7: (932) 328-0559 <br>
 <!--Islacom8:(955)9270322-->
 GMail: jumelonline01@gmail.com<br> 
-<!--VVhatsApp: +639208783272-->
 <!--VMail: jumel_online@yahoo.com-->
 Skype(Lync): jumel.tagnipez<br>
+VVhatsApp: +639208783272<br>
 YTmusic: tagnipez.jumel@gmail.com
 <!--URL:meetingsapac44.webex.com/meet/DV1ZTA-->
 
