--- a/portfolio.html
+++ b/portfolio.html
@@ -204,7 +204,7 @@ He's into IT project management having interest in law school for land reform la
 GMobile: 09559270322<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-PLDT7: (932) 328-0559 <br>
+PLDT7: (932) 328-0559 cignalplay<br>
 <!--Islacom8:(955)9270322-->
 GMail: jumelonline01@gmail.com<br> 
 <!--VMail: jumel_online@yahoo.com-->
