--- a/portfolio.html
+++ b/portfolio.html
@@ -204,13 +204,13 @@ He's into IT project management having interest in law school for land reform la
 GMobile: 09559270322<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-PLDT7: (932) 328-0559 cignalplay wifi<br>
+PLDT7: (932) 328-0559 cignalplay<br>
 <!--Islacom8:(955)9270322-->
-GMail/YT: jumelonline01@gmail.com abc5tv<br> 
+GMail: jumelonline01@gmail.com abc5<br> 
 <!--VMail: jumel_online@yahoo.com-->
 <!--Skype(Lync): jumel.tagnipez-->
 <!--VVhatsApp: +639208783272-->
-YTmusic: tagnipez.jumel@gmail.com nbcRadio5<br>
+YTmusic: tagnipez.jumel@gmail.com nbc5<br>
 <!--URL:meetingsapac44.webex.com/meet/DV1ZTA-->
 
 </p>
