--- a/portfolio.html
+++ b/portfolio.html
@@ -208,10 +208,10 @@ PLDT7: (932) 328-0559 hbomax <br>
 <!--Islacom8:(955)9270322-->
 GMail: jumelonline01@gmail.com <br> 
 <!--VMail: jumel_online@yahoo.com-->
-<!--Skype(Lync): jumel.tagnipez-->
+Skype(Lync): jumel.tagnipez @ANA @AXA
 <!--VVhatsApp: +639208783272-->
 YTmusic: tagnipez.jumel@gmail.com <br>
-<!--URL:meetingsapac44.webex.com/meet/DV1ZTA-->
+URL:meetingsapac44.webex.com/meet/DV1ZTA
 
 </p>
 
