--- a/portfolio.html
+++ b/portfolio.html
@@ -212,7 +212,7 @@ Skype(Lync): jumel.tagnipez @ANA @AXA
 <!--VVhatsApp: +639208783272-->
 YTmusic: tagnipez.jumel@gmail.com <br>
 URL:meetingsapac44.webex.com/meet/DV1ZTA <br>
-VHF145
+Bell curve @145mhz
 
 </p>
 
