--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
 
 
 		<h1>Jumel D. Tagnipez</h1>
-		<h2> <!--em-->Quality/FA Engineer/IT (radio"DV1ZTA"@Webex)
+		<h2> <!--em-->Quality/FA Engineer/IT tutor
 </em> </h2>
 
                 
