--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-GMobile: 09559270322<br>
+GMobile: 09559270322, 09457935666<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
 PLDT7: (932) 328-0559 <br>
@@ -210,7 +210,7 @@ GMail: jumelonline01@gmail.com <br>
 <!--VMail: jumel_online@yahoo.com-->
 Skype(Lync): jumel.tagnipez <br>
 <!--@ANA/CBP @AXA/USNA-->
-<!--VVhatsApp: +639208783272-->
+VVhatsApp: +639208783272<br>
 YTmusic: tagnipez.jumel@gmail.com <br>
 URL:meetingsapac44.webex.com/meet/DV1ZTA <br>
 
