--- a/portfolio.html
+++ b/portfolio.html
@@ -201,7 +201,7 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-GMobile: 09559270322, 09457935666<br>
+GMobile: (955)9270322, 09457935666<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
 PLDT7: (932) 328-0559 cignalmax <br>
