--- a/portfolio.html
+++ b/portfolio.html
@@ -207,11 +207,11 @@ GMobile: (955)9270322, 09457935666 gcash<br>
 PLDT7: (932) 328-0559 cignalmax <br>
 <!--Islacom8:(955)9270322-->
 GMail: jumelonline01@gmail.com <br> 
-<!--VMail: jumel_online@yahoo.com-->
+VMail: jumel_online@yahoo.com <br>
 Skype(Lync): jumel.tagnipez <br>
 <!--@ANA/CBP @AXA/USNA-->
 VVhatsApp: +639208783272<br>
-YTmusic: tagnipez.jumel@gmail.com <br>
+
 URL:meetingsapac44.webex.com/meet/DV1ZTA <br>
 
 
