--- a/portfolio.html
+++ b/portfolio.html
@@ -201,16 +201,16 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-GMobile: (955)9270322, 09457935666 gcash<br>
+GMobile: 09457935666<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-PLDT7: (932) 328-0559 cignalmax <br>
+PLDT7: (932) 328-0559<br>
 <!--Islacom8:(955)9270322-->
 GMail: jumelonline01@gmail.com <br> 
-VMail: jumel_online@yahoo.com <br>
+VoiceMail: jumel_online@yahoo.com <br>
 Skype(Lync): jumel.tagnipez <br>
 <!--@ANA/CBP @AXA/USNA-->
-VVhatsApp: +639208783272<br>
+<!--VVhatsApp: +639208783272-->
 
 URL:meetingsapac44.webex.com/meet/DV1ZTA <br>
 
