--- a/portfolio.html
+++ b/portfolio.html
@@ -204,11 +204,11 @@ He's into IT project management having interest in law school for land reform la
 GMobile: 09457935666<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-PLDT7: (932) 328-0559<br>
+PLDT.SUN: (932) 328-0559<br>
 <!--Islacom8:(955)9270322-->
 GMail: jumelonline01@gmail.com <br> 
 VoiceMail: jumel_online@yahoo.com <br>
-Skype(Lync): jumel.tagnipez <br>
+<!--Skype(Lync): jumel.tagnipez-->
 <!--@ANA/CBP @AXA/USNA-->
 <!--VVhatsApp: +639208783272-->
 
