--- a/portfolio.html
+++ b/portfolio.html
@@ -204,7 +204,7 @@ He's into IT project management having interest in law school for land reform la
 G.Mobile: 09457935666<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-PLDT.SUN: (932) 328-0559<br>
+PLDT.SUN: (932) 328-0559 signature<br>
 <!--Islacom8:(955)9270322-->
 G.Mail: jumelonline01@gmail.com <br> 
 VoiceMail: tagnipez.jumel@gmail.com <br>
