--- a/portfolio.html
+++ b/portfolio.html
@@ -201,13 +201,13 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-G.Mobile: 09457935666<br>
+Mobile: 09323280559/ 09457935666<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-PLDT.SUN: (932) 328-0559 signature<br>
+<!--PLDT.SUN: (932) 328-0559 signature-->
 <!--Islacom8:(955)9270322-->
-G.Mail: jumelonline01@gmail.com <br> 
-VoiceMail: tagnipez.jumel@gmail.com <br>
+<!--G.Mail: jumelonline01@gmail.com-->
+Mail: tagnipez.jumel@gmail.com <br>
 <!--Skype(Lync): jumel.tagnipez-->
 <!--@ANA/CBP @AXA/USNA-->
 <!--VVhatsApp: +639208783272-->
