--- a/portfolio.html
+++ b/portfolio.html
@@ -207,7 +207,7 @@ Mobile: 09323280559/ 09457935666<br>
 <!--PLDT.SUN: (932) 328-0559 signature-->
 <!--Islacom8:(955)9270322-->
 <!--G.Mail: jumelonline01@gmail.com-->
-Mail: tagnipez.jumel@gmail.com <br>
+Mail: jumel.tagnipez@aol.com <br>
 <!--Skype(Lync): jumel.tagnipez-->
 <!--@ANA/CBP @AXA/USNA-->
 <!--VVhatsApp: +639208783272-->
