--- a/portfolio.html
+++ b/portfolio.html
@@ -201,10 +201,10 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-Mobile: 09323280559/ 09457935666<br>
+Hotline: 09323280559/ 09457935XXX<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-<!--PLDT.SUN: (932) 328-0559 signature-->
+Textline: 09165145735
 <!--Islacom8:(955)9270322-->
 <!--G.Mail: jumelonline01@gmail.com-->
 Mail: jumel.tagnipez@aol.com <br>
