--- a/portfolio.html
+++ b/portfolio.html
@@ -204,10 +204,10 @@ He's into IT project management having interest in law school for land reform la
 Hotline: 09323280559/ 09457935XXX<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-Textline: 09165145735
+Textline: 09165145735<br>
 <!--Islacom8:(955)9270322-->
 <!--G.Mail: jumelonline01@gmail.com-->
-Mail: jumel.tagnipez@aol.com <br>
+AMail: jumel.tagnipez@aol.com <br>
 <!--Skype(Lync): jumel.tagnipez-->
 <!--@ANA/CBP @AXA/USNA-->
 <!--VVhatsApp: +639208783272-->
