--- a/portfolio.html
+++ b/portfolio.html
@@ -207,7 +207,7 @@ Hotline: 09323280559/ 09457935XXX<br>
 Textline: 09165145735<br>
 <!--Islacom8:(955)9270322-->
 <!--G.Mail: jumelonline01@gmail.com-->
-AMail: jumel.tagnipez@aol.com <br>
+EMail: jumel.tagnipez@aol.com <br>
 <!--Skype(Lync): jumel.tagnipez-->
 <!--@ANA/CBP @AXA/USNA-->
 <!--VVhatsApp: +639208783272-->
