--- a/portfolio.html
+++ b/portfolio.html
@@ -252,11 +252,11 @@ URL:meetingsapac44.webex.com/meet/DV1ZTA <br>
 		<a href="mailto:tagnipez.jumel@gmail.com"><small>©2020 jumeltagnipez |Email</small></a>
 		
 		<div class="socmed">
-		<a href="https://www.linktr.ee/jumel"><img src="assets/images/linktree.png" alt="social-linktree"></a>
+		<!--a href="https://www.linktr.ee/jumel"><img src="assets/images/linktree.png" alt="social-linktree"></a-->
                 <a href="https://www.gitlab.com/TagnipezJumel"><img src="assets/images/gitlab.png" alt="social-gitlab"></a>
 					<a href="https://www.facebook.com/jumel.tagnipez"> <img src="assets/images/FARIS.jpg" alt="social-facebook"></a> 
                 <a href="https://www.facebook.com/jumel.tagnipez.73"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
-		<!--a href="https://www.twitter.com/JumelTagnipez"> <img src="assets/images/twitter.jpg" alt="social-twitter"></a-->
+		<a href="https://www.twitter.com/JumelTagnipez"> <img src="assets/images/twitter.jpg" alt="social-twitter"></a>
 		<!--a href="https://www.instagram.com/jumeltagnipez"> <img src="assets/images/instagram.jpg" alt="social-instagram"></a-->
 		<!--a href="https://youtu.be/4bcRmy3FGag"> <img src="assets/images/youtube.jpg" alt="social-youtube"></a-->
 		</div> 
