--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
 
 
 		<h1>Jumel D. Tagnipez</h1>
-		<h2> <!--em-->Quality/FA Engineer/ITtutor
+		<h2> <!--em-->Quality/FA Engineer/6sigma
 </em> </h2>
 
                 
