--- a/portfolio.html
+++ b/portfolio.html
@@ -201,12 +201,12 @@ He's into IT project management having interest in law school for land reform la
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 <br>
-Hotline: 09323280559/ 09457935XXX<br>
+SkypeLine: jumel.tagnipez<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
 Textline: 09165145735<br>
 <!--Islacom8:(955)9270322-->
-<!--G.Mail: jumelonline01@gmail.com-->
+G.Mail: jumel.tagnipez@gmail.com
 EMail: jumel.tagnipez@aol.com <br>
 <!--Skype(Lync): jumel.tagnipez-->
 <!--@ANA/CBP @AXA/USNA-->
