--- a/portfolio.html
+++ b/portfolio.html
@@ -204,13 +204,13 @@ He's into IT project management having interest in law school for land reform la
 SkypeLine: jumel.tagnipez<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-Textline: 09165145735<br>
+Textline: 09165145735.viber<br>
 <!--Islacom8:(955)9270322-->
-G.Mail: jumel.tagnipez@gmail.com
-EMail: jumel.tagnipez@aol.com <br>
+
+EMail: tagnipez.jumel@gmail.com <br>
 <!--Skype(Lync): jumel.tagnipez-->
 <!--@ANA/CBP @AXA/USNA-->
-<!--VVhatsApp: +639208783272-->
+VVhatsApp: +639208783272 <br>
 
 URL:meetingsapac44.webex.com/meet/DV1ZTA <br>
 
