--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
 
 
 		<h1>Jumel D. Tagnipez</h1>
-		<h2> <!--em-->Quality/FA Engineer/6sigma(ret.)
+		<h2> <!--em-->Quality/FA Engineer(ret.)
 </em> </h2>
 
                 
@@ -204,7 +204,7 @@ He's into IT project management having interest in law school for land reform la
 SkypeLine: jumel.tagnipez<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-Textline: 09165145735.viber<br>
+Textline: 09165145735 viber<br>
 <!--Islacom8:(955)9270322-->
 
 EMail: tagnipez.jumel@gmail.com <br>
