--- a/faq.html
+++ b/faq.html
@@ -260,7 +260,7 @@ Baguio: PHP1,500
       </div>
       <div id="collapseTwelve" class="collapse" data-parent="#accordion">
         <div class="card-body">
-          Not necessary unless you will donate foods for them.
+          Not necessary unless you will donate foods for them. Thus, click services also provides food orders like fried rice w/ egg and adobo cusine.
         </div>
       </div>
     </div>  
