--- a/faq.html
+++ b/faq.html
@@ -258,7 +258,7 @@ Baguio: PHP1,500
           12. Do we need to feed the photographers?
         </a>
       </div>
-      <div id="collapseTwelve" class="collapse" data-parent="#accordion">
+      <div id="collapseTwelve" class="collapse show" data-parent="#accordion">
         <div class="card-body">
           Not necessary unless you will donate foods for them. Thus, click services also provides food orders like fried rice w/ egg and adobo cusine.
         </div>
