--- a/portfolio.html
+++ b/portfolio.html
@@ -78,7 +78,7 @@
 		   <p class="bio"> Engr. Jumel Tagnipez is a registered PRC (Professional Regulation Commission)<span> ECE 0039013 and “cum laude” </span> graduate of Electronics&Communications Engineering in Cebu Institute of Technology-University.<br>
 			During his free time, he loves to code & tutors programming,probstat & calculus.<br>
 			He has been working professionally since 2006 in automotive/semiconductor<br>
-			industries as a Quality/FA Engineer doing forensic investigation of a defective<br>
+			industries as a Quality/FA TestEngineer doing forensic investigation of a defective<br>
 			(hardware/software) microcontroller with the help of blueprint designs<br>
 			and the CAD software like Virtuoso layout suite.<br>
 		
