--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ Baguio: PHP1,500
       </div>
       <div id="collapseTwelve" class="collapse show" data-parent="#accordion">
         <div class="card-body">
-          Not necessary unless you will donate foods for them. Thus, click services also provides food orders like fried rice w/ egg and adobo cuisine & sinigang paksiw/bistek.
+          Not necessary unless you will donate foods for them. Thus, click services also provides food orders like fried rice w/ egg and adobo cuisine & sinigang paksiw/shabu2x.
         </div>
       </div>
     </div>  
