--- a/portfolio.html
+++ b/portfolio.html
@@ -202,9 +202,10 @@ He's into IT project management having interest in law school for land reform la
 <p>How may I help you? Feel free to contact me:<br>
 <br>
 SkypeLine: jumel.tagnipez<br>
+live:.cid.272cd1b7bddd1622<br>
 <!--09183140152@smart.mms.ph-->
 <!--09153760570@globextm.com.ph-->
-Textline: 09165145735 viber<br>
+<!--Textline: 09165145735 viber-->
 <!--Islacom8:(955)9270322-->
 
 EMail: tagnipez.jumel@gmail.com <br>
@@ -249,7 +250,7 @@ URL:meetingsapac44.webex.com/meet/DV1ZTA <br>
 <div class="footer-main">
 	
 		
-		<a href="mailto:tagnipez.jumel@gmail.com"><small>©2020 jumeltagnipez |Email</small></a>
+		<a href="mailto:tagnipez.jumel@gmail.com"><small>©2021 jumeltagnipez |Email</small></a>
 		
 		<div class="socmed">
 		<!--a href="https://www.linktr.ee/jumel"><img src="assets/images/linktree.png" alt="social-linktree"></a-->
