--- a/portfolio.html
+++ b/portfolio.html
@@ -208,10 +208,10 @@ live:.cid.272cd1b7bddd1622<br>
 <!--Textline: 09165145735 viber-->
 <!--Islacom8:(955)9270322-->
 
-EMail: tagnipez.jumel@gmail.com <br>
+EMail: jumel.tagnipez@gmail.com <br>
 <!--Skype(Lync): jumel.tagnipez-->
 <!--@ANA/CBP @AXA/USNA-->
-Text: 09208783272 /09760211946 <br>
+WhatsApp: 09208783272<br>
 
 URL:meetingsapac44.webex.com/meet/DV1ZTA <br>
 
