--- a/portfolio.html
+++ b/portfolio.html
@@ -211,7 +211,7 @@ live:.cid.272cd1b7bddd1622<br>
 EMail: jumel.tagnipez@gmail.com <br>
 <!--Skype(Lync): jumel.tagnipez-->
 <!--@ANA/CBP @AXA/USNA-->
-WhatsApp: 09208783272<br>
+Text: 09208783272/ 09165145735<br>
 
 URL:meetingsapac44.webex.com/meet/DV1ZTA <br>
 
