--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
 			
 He's into IT project management having interest in law school for land reform laws, labor codes, tax, etc. <br> 
 
-<!-- Failure Analysis is life saving. He did save a lot of driver’s life. If there is a recall, don’t hesistate to ask your nearest car dealer.<br> -->
+He was a salutatorian graduate back in highschool at the College of Maasin (Silliman University affiliated).<br>
 
 		
 			
