--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
 			
 He's into IT project management having interest in law school for land reform laws, labor codes, tax, etc. <br> 
 
-He was a salutatorian graduate back in highschool at the College of Maasin (Silliman University affiliated).<br>
+He was a salutatorian graduate back in highschool at the College of Maasin (Silliman University affiliated).<br> Note: Fiber technology is part of a semiconductor industry.
 
 		
 			
