--- a/portfolio.html
+++ b/portfolio.html
@@ -249,8 +249,8 @@ URL:meetingsapac44.webex.com/meet/DV1ZTA <br>
 
 <div class="footer-main">
 	
-		
-		<a href="mailto:tagnipez.jumel@gmail.com"><small>©2023 jumeltagnipez |Email</small></a>
+		<a href="https://jumeltagnipez.github.io/es-UK/portfolio.html"><small>©2023 jumeltagnipez|</small></a>
+		<a href="mailto:tagnipez.jumel@gmail.com"><small>Email</small></a>
 		
 		<div class="socmed">
 		<!--a href="https://www.linktr.ee/jumel"><img src="assets/images/linktree.png" alt="social-linktree"></a-->
