--- a/landingpage.html
+++ b/landingpage.html
@@ -22,7 +22,7 @@
 
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-    <a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Click</a>
+    <a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Play</a>
     <span class="navbar-toggler-icon"></span>
     </button>
     	
