--- a/landingpage.html
+++ b/landingpage.html
@@ -22,7 +22,7 @@
 
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-    <a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Play</a>
+    <a class="navbar-brand text-white"><img src="assets/images/shoot2.png" height="30px" width="30px">Click</a>
     <span class="navbar-toggler-icon"></span>
     </button>
     	
@@ -53,7 +53,7 @@
 <div class="section2 text-white"><h4>ç</h4>
 	<h1>Click<hr>
 	<a href="index.html">	
-	<button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Click Here</button></h1>
+	<button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Click Play</button></h1>
 	</a>
 </div>
 <hr class="my-1">
