--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ Baguio: PHP1,500
 <h3 id="us">Contact Us</h3>
 <p>We'd love to hear from you or just say hello.<br>
 
-Mobile: +63 932 328 0559<br>
+Mobile: +63 920 8783272<br>
 Email: tagnipez.jumel@gmail.com</p>
 <p><span>Book Now!</span>
 There are only 52 Saturdays in a year.<br>
@@ -429,7 +429,7 @@ Popular dates often book up months in advance or even a year.</p>
 
 
 <div class="footer-main">
-    <a href="https://jumeltagnipez.github.io/es-UK/portfolio.html"><small>©2023 jumeltagnipez|</small></a>
+    <a href="https://jumeltagnipez.github.io/es-UK/portfolio.html"><small>©2024 jumeltagnipez|</small></a>
     <a href="mailto:tagnipez.jumel@gmail.com"><small>Email</small></a>
     
     <div class="socmed">
