--- a/port.html
+++ b/port.html
@@ -140,7 +140,7 @@
 <h3 id="us">Contact</h3>
 <p>How may I help you? Feel free to contact me:<br>
 
-Mobile: 09323280559<br>
+Mobile: 09208783272<br>
 Email: tagnipez.jumel@gmail.com</p>
 <p><span>In every problem, there's a solution!</span></p>
 	<form>
@@ -175,7 +175,7 @@ Email: tagnipez.jumel@gmail.com</p>
 		<a href="https://www.facebook.com/jumel.tagnipez"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
 		<a href="https://www.twitter.com/JumelTagnipez"> <img src="assets/images/twitter.jpg" alt="social-twitter"></a>
 		<a href="https://www.instagram.com/jumeltagnipez"> <img src="assets/images/instagram.jpg" alt="social-instagram"></a>
-		<a href="https://youtube.com"> <img src="assets/images/youtube.jpg" alt="social-youtube"></a>
+		<a href="https://www.youtube.com/@jumeltagnipez3991"> <img src="assets/images/youtube.jpg" alt="social-youtube"></a>
 		</div> 
 </div>
 
