--- a/landingpage.html
+++ b/landingpage.html
@@ -68,10 +68,10 @@
 		<a href="mailto:tagnipez.jumel@gmail.com"><small>Email</small></a>
 		
 		<div class="socmed">
-		<a href="https://www.facebook.com"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
-		<a href="https://www.twitter.com"> <img src="assets/images/twitter.jpg" alt="social-twitter"></a>
-		<a href="https://www.instagram.com"> <img src="assets/images/instagram.jpg" alt="social-instagram"></a>
-		<a href="https://www.youtube.com"> <img src="assets/images/youtube.jpg" alt="social-youtube"></a>
+		<a href="https://www.facebook.com/jumel.tagnipez"> <img src="assets/images/facebook.jpg" alt="social-facebook"></a>
+		<a href="https://www.twitter.com/JumelTagnipez"> <img src="assets/images/twitter.jpg" alt="social-twitter"></a>
+		<a href="https://www.instagram.com/jumeltagnipez"> <img src="assets/images/instagram.jpg" alt="social-instagram"></a>
+		<a href="https://www.youtube.com/@jumeltagnipez3991"> <img src="assets/images/youtube.jpg" alt="social-youtube"></a>
 		</div> 
 </div>
 </div> <!-- landing -->
