--- a/landingpage.html
+++ b/landingpage.html
@@ -53,7 +53,7 @@
 <div class="section2 text-white"><h4>ç</h4>
 	<h1>Click<hr>
 	<a href="index.html">	
-	<button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Click Play</button></h1>
+	<button type="button" class="btn btn-outline-info btn-lg animate bounceIn">Book</button></h1>
 	</a>
 </div>
 <hr class="my-1">
